--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </script>
 </head>
 <body class="manrope-font">
-    <header class=" md:container mx-auto my-10">
+    <header class="md:container mx-auto my-10">
         <!-- nav bar start -->
         <nav>
             <div class="navbar flex justify-between">
@@ -104,9 +104,92 @@
             </div>
         </nav>
         <!-- nav bar end -->
+        <!-- banner start   -->
+        <section class="banner">
+            <!-- image section  -->
+            <div class=" flex justify-center items-center">
+                <img src="./images/banner.png" alt="">
+            </div>
+
+            <!-- text section -->
+            <div class="text-center">
+                <h1 class=" my-6 font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl ">
+                    A barn house of this design has <br> a striking appearance
+                </h1>
+                <p class="text-basic-01 py-6 max-w-sm md:max-w-2xl mx-auto">The barn house captivates with its blend of
+                    rustic charm
+                    and modern
+                    sophistication, featuring
+                    weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                <div class=" btn rounded-full bg-bt-bg1 border-solid border-2 border-[#ABEF5F] font-bold my-6">
+                    <a class="">View Details</a>
+                    <button class=" h-8 w-8 bg-black -rotate-45 rounded-full text-white">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <!-- banner end   -->
 
     </header>
-    <main></main>
+    <main class="bg-[#F4F4F4]">
+        <!-- design thoghtful start  -->
+        <section class="md:container mx-auto py-10 md:py-16 lg:py-28">
+            <div class="grid grid-cols-1 md:grid-cols-2 items-center p-4 gap-4 relative">
+                <div class="hidden md:flex absolute -top-10 -left-10">
+                    <img src="./images/Vector.png" alt="">
+                </div>
+                <!-- text section  -->
+                <div class="">
+                    <!-- about us button  -->
+                    <div class="text-center md:text-left">
+                        <div class=" btn rounded-full bg-white  font-bold">
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <a class="text-[#494949]">About Us</a>
+
+                        </div>
+                    </div>
+                    <div class="text-center md:text-left">
+                        <h3 class=" my-6 font-bold  text-2xl md:text-3xl lg:text-4xl xl:text-5xl ">We design thoughtful,
+                            liveable spaces</h3>
+                        <p class=" text-[#494949] py-2 max-w-sm md:max-w-2xl mx-auto lg:mx-0">We design thoughtful,
+                            liveable spaces that blend functionality with aesthetics, creating environments where
+                            comfort meets style. </p>
+                    </div>
+                    <!-- design thoughtful card section  -->
+                    <div class="">
+                        <div class="bg-[#FFFFFF] rounded-lg grid grid-cols-12 items-center gap-4 py-4 my-4">
+                            <div class="col-span-4 md:col-span-2">
+                                <img class="px-4" src="./images/commercial.png" alt="">
+                            </div>
+                            <div class="col-span-8">
+                                <h5 class=" font-bold text-xl">Commercial</h5>
+                                <p class="text-[#737373] max-w-2xl mx-auto">We specialize in crafting commercial spaces
+                                    that enhance productivity and reflect brand identity.</p>
+                            </div>
+                        </div>
+                        <div class="bg-[#FFFFFF] rounded-lg grid grid-cols-12 items-center gap-4 py-4">
+                            <div class="col-span-4 md:col-span-2">
+                                <img class="px-4" src="./images/residential.png" alt="">
+                            </div>
+                            <div class="col-span-8">
+                                <h5 class=" font-bold text-xl">Residential</h5>
+                                <p class="text-[#737373] max-w-2xl mx-auto">We create residential spaces that are warm,
+                                    inviting, and tailored to your lifestyle.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- image section -->
+                <div class="flex justify-center items-center">
+                    <img src="./images/Rectangle.png" class="">
+                </div>
+            </div>
+        </section>
+        <!-- design thoghtful end  -->
+    </main>
     <footer></footer>
 </body>
 </html>
