add extra section

--- a/index.html
+++ b/index.html
@@ -197,12 +197,20 @@
             <div class="pb-6">
                 <div class="">
                     <div class="text-center">
+                        <div class=" btn rounded-full bg-[#abef5f33]  font-bold">
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <a class="text-[#494949]">How we work</a>
+    
+                        </div>
+    
+                    </div>
+                    <!-- <div class="text-center">
                         <div class=" btn rounded-full bg-white  font-bold">
                             <i class="fa-solid fa-arrow-right"></i>
                             <a class="text-[#494949]">How we work</a>
 
                         </div>
-                    </div>
+                    </div> -->
                     <div class="text-center ">
                         <h3 class=" my-6 font-bold  text-2xl md:text-3xl lg:text-4xl xl:text-5xl ">Our Work Process
                         </h3>
@@ -340,8 +348,71 @@
         </div>
     </section>
     <!-- portfolio end  -->
-     <!-- here uni section  -->
-
+    <!-- here uni section  -->
+    <!-- Team Members Section Start -->
+    <section class="bg-white py-14 mb-14">
+    <div class="container mx-auto px-5 md:px-10">
+      <div class="text-center space-y-6">
+        <div class="flex justify-center items-center">
+            <div class="text-center">
+                <div class=" btn rounded-full bg-[#abef5f33]  font-bold">
+                    <i class="fa-solid fa-arrow-right"></i>
+                    <a class="text-[#494949]">Meet Our Team</a>
+                </div>
+            </div>
+        </div>
+        <h2 class="font-extrabold text-3xl lg:text-4xl max-w-md mx-auto">Our Team</h2>
+        <p class="max-w-xl mx-auto">Get to know the talented individuals behind our success.</p>
+      </div>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 mt-10">
+        <!-- Team Member 1 -->
+        <div class="bg-gray-100 p-6 rounded-lg shadow-lg">
+          <div class="flex items-center mb-4">
+            <img class="w-16 h-16 rounded-full mr-4" src="./images/team1.jpg" alt="Team Member 1">
+            <div>
+              <h5 class="font-bold text-xl">Alice Johnson</h5>
+              <p class="text-gray-500">Project Manager</p>
+            </div>
+          </div>
+          <p class="text-gray-700">Alice is a seasoned project manager with over 10 years of experience in the industry.</p>
+        </div>
+        <!-- Team Member 2 -->
+        <div class="bg-gray-100 p-6 rounded-lg shadow-lg">
+          <div class="flex items-center mb-4">
+            <img class="w-16 h-16 rounded-full mr-4" src="./images/team2.jpg" alt="Team Member 2">
+            <div>
+              <h5 class="font-bold text-xl">Bob Smith</h5>
+              <p class="text-gray-500">Lead Developer</p>
+            </div>
+          </div>
+          <p class="text-gray-700">Bob is our lead developer, specializing in front-end technologies and user experience.</p>
+        </div>
+        <!-- Team Member 3 -->
+        <div class="bg-gray-100 p-6 rounded-lg shadow-lg">
+          <div class="flex items-center mb-4">
+            <img class="w-16 h-16 rounded-full mr-4" src="./images/team3.jpg" alt="Team Member 3">
+            <div>
+              <h5 class="font-bold text-xl">Carol Williams</h5>
+              <p class="text-gray-500">Designer</p>
+            </div>
+          </div>
+          <p class="text-gray-700">Carol is a creative designer with a keen eye for detail and a passion for aesthetics.</p>
+        </div>
+        <!-- Team Member 4 -->
+        <div class="bg-gray-100 p-6 rounded-lg shadow-lg">
+          <div class="flex items-center mb-4">
+            <img class="w-16 h-16 rounded-full mr-4" src="./images/team4.jpg" alt="Team Member 4">
+            <div>
+              <h5 class="font-bold text-xl">David Brown</h5>
+              <p class="text-gray-500">Marketing Specialist</p>
+            </div>
+          </div>
+          <p class="text-gray-700">David is our marketing specialist, with expertise in digital marketing and brand strategy.</p>
+        </div>
+      </div>
+    </div>
+    </section>
+    <!-- Team Members Section End -->
 
     <!-- next project start  -->
     <section class="bg-bg-pattern bg-cover bg-no-repeat">
