--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     <!-- portfolio end  -->
     <!-- here uni section  -->
     <!-- Team Members Section Start -->
-    <section class="bg-white py-14 mb-14">
+    <section class="bg-white md:container mx-auto my-20">
     <div class="container mx-auto px-5 md:px-10">
       <div class="text-center space-y-6">
         <div class="flex justify-center items-center">
