fixing bug resposive related

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body class="manrope-font">
     <header class="md:container mx-auto my-10">
         <!-- nav bar start -->
-        <nav>
+        <nav class="md:container mx-auto">
             <div class="navbar flex justify-between">
                 <div class="">
                     <button
