changes the p and h

--- a/index.html
+++ b/index.html
@@ -117,13 +117,9 @@
             <!-- text section -->
             <div class="text-center">
                 <h1 class=" my-6 font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl ">
-                    A barn house of this design has <br> a striking appearance
+                    This style of barn house has <br> a remarkable appearance
                 </h1>
-                <p class="text-basic-01 py-6 max-w-sm md:max-w-2xl mx-auto">The barn house captivates with its blend of
-                    rustic charm
-                    and modern
-                    sophistication, featuring
-                    weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                <p class="text-basic-01 py-6 max-w-sm md:max-w-2xl mx-auto">With its huge windows that let in an abundance of natural light, worn wood, sleek metal accents, and a combination of modern refinement and rustic charm, the barn house captivates onlookers.</p>
                 <div class=" btn rounded-full bg-bt-bg1 border-solid border-2 border-[#ABEF5F] font-bold my-6">
                     <a class="">View Details</a>
                     <button class=" h-8 w-8 bg-black -rotate-45 rounded-full text-white">
@@ -154,9 +150,7 @@
                     <div class="text-center md:text-left">
                         <h3 class=" my-6 font-bold  text-2xl md:text-3xl lg:text-4xl xl:text-5xl ">We design thoughtful,
                             liveable spaces</h3>
-                        <p class=" text-[#494949] py-2 max-w-sm md:max-w-2xl mx-auto lg:mx-0">We design thoughtful,
-                            liveable spaces that blend functionality with aesthetics, creating environments where
-                            comfort meets style. </p>
+                        <p class=" text-[#494949] py-2 max-w-sm md:max-w-2xl mx-auto lg:mx-0">We create intelligent, livable spaces that combine aesthetics and practicality to create settings where comfort and style collide. </p>
                     </div>
                     <!-- design thoughtful card section  -->
                     <div class="">
@@ -166,8 +160,7 @@
                             </div>
                             <div class="col-span-8">
                                 <h5 class=" font-bold text-xl">Commercial</h5>
-                                <p class="text-[#737373] max-w-2xl mx-auto">We specialize in crafting commercial spaces
-                                    that enhance productivity and reflect brand identity.</p>
+                                <p class="text-[#737373] max-w-2xl mx-auto">Our specialty is designing work environments that are both brand-identity- and productivity-driven.</p>
                             </div>
                         </div>
                         <div class="bg-[#FFFFFF] rounded-lg grid grid-cols-12 items-center gap-4 py-4">
@@ -176,8 +169,7 @@
                             </div>
                             <div class="col-span-8">
                                 <h5 class=" font-bold text-xl">Residential</h5>
-                                <p class="text-[#737373] max-w-2xl mx-auto">We create residential spaces that are warm,
-                                    inviting, and tailored to your lifestyle.</p>
+                                <p class="text-[#737373] max-w-2xl mx-auto">We design living areas that are cozy, welcoming, and customized to fit your needs.</p>
                             </div>
                         </div>
                     </div>
