--- a/index.html
+++ b/index.html
@@ -196,9 +196,7 @@
                     <div class="text-center ">
                         <h3 class=" my-6 font-bold  text-2xl md:text-3xl lg:text-4xl xl:text-5xl ">Our Work Process
                         </h3>
-                        <p class=" text-[#494949] py-2 max-w-2xl mx-auto">Our work process involves collaboration,
-                            meticulous planning,
-                            and attention to detail, ensuring each project meets your vision and needs.</p>
+                        <p class=" text-[#494949] py-2 max-w-2xl mx-auto">We begin by developing a concept that captures your vision and establishes the framework for a distinctive area.</p>
                     </div>
                 </div>
 
@@ -215,8 +213,7 @@
                     <div class="bg-[#EFDA6E] p-6 rounded-lg">
                         <div><img src="./images/flow-chart.png" alt=""></div>
                         <h5 class=" font-bold text-xl py-4">Design Process</h5>
-                        <p class="text-[#494949]">Our design process involves translating ideas into detailed plans,
-                            ensuring functionality and aesthetics align.
+                        <p class="text-[#494949]">Throughout the project, we offer active supervision to guarantee quality and conformity to the design.
                         </p>
                     </div>
                     <div class="bg-[#A4DAC3] p-6 rounded-lg">
